add a solution for the day04's problem

--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -23,3 +23,7 @@ executable day02
 executable day03
   import:              exe
   main-is:             Day03.hs
+
+executable day04
+  import:              exe
+  main-is:             Day04.hs
