--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -27,3 +27,7 @@ executable day03
 executable day04
   import:              exe
   main-is:             Day04.hs
+
+executable day05
+  import:              exe
+  main-is:             Day05.hs
