--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -10,6 +10,7 @@ build-type:            Simple
 common exe
   build-depends:       base >=4.13 && <4.14
                      , megaparsec ^>= 9.0.0
+                     , containers
   default-language:    Haskell2010
 
 executable day01
@@ -31,3 +32,7 @@ executable day04
 executable day05
   import:              exe
   main-is:             Day05.hs
+
+executable day06
+  import:              exe
+  main-is:             Day06.hs
