add a solution for the day07's problem

--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -36,3 +36,7 @@ executable day05
 executable day06
   import:              exe
   main-is:             Day06.hs
+
+executable day07
+  import:              exe
+  main-is:             Day07.hs
