--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -40,3 +40,7 @@ executable day06
 executable day07
   import:              exe
   main-is:             Day07.hs
+
+executable day08
+  import:              exe
+  main-is:             Day08.hs
