--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -44,3 +44,7 @@ executable day07
 executable day08
   import:              exe
   main-is:             Day08.hs
+
+executable day09
+  import:              exe
+  main-is:             Day09.hs
