add a solution for the day10's problem

--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -48,3 +48,7 @@ executable day08
 executable day09
   import:              exe
   main-is:             Day09.hs
+
+executable day10
+  import:              exe
+  main-is:             Day10.hs
