--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -57,3 +57,7 @@ executable day09
 executable day10
   import:              exe
   main-is:             Day10.hs
+
+executable day11
+  import:              exe
+  main-is:             Day11.hs
