--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -76,3 +76,7 @@ executable day12
 executable day13
   import:              exe
   main-is:             Day13.hs
+
+executable day14
+  import:              exe
+  main-is:             Day14.hs
