add a solution for the day15's problem

--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -80,3 +80,7 @@ executable day13
 executable day14
   import:              exe
   main-is:             Day14.hs
+
+executable day15
+  import:              exe
+  main-is:             Day15.hs
