add a solution for the day17's problem

--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -88,3 +88,7 @@ executable day15
 executable day16
   import:              exe
   main-is:             Day16.hs
+
+executable day17
+  import:              exe
+  main-is:             Day17.hs
