--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -92,3 +92,7 @@ executable day16
 executable day17
   import:              exe
   main-is:             Day17.hs
+
+executable day18
+  import:              exe
+  main-is:             Day18.hs
