day21, a parsing part

--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -106,3 +106,7 @@ executable day19
 executable day20
   import:              exe
   main-is:             Day20.hs
+
+executable day21
+  import:              exe
+  main-is:             Day21.hs
