--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -115,3 +115,8 @@ executable day22
   import:              exe
   main-is:             Day22.hs
   build-depends:       unordered-containers
+
+executable day23
+  import:              exe
+  main-is:             Day23.hs
+  build-depends:       unordered-containers
