add a solution for the day24's problem

--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -121,3 +121,8 @@ executable day23
   main-is:             Day23.hs
   build-depends:       vector
                      , mtl
+
+executable day24
+  import:              exe
+  main-is:             Day24.hs
+  build-depends:       containers
