add a solution for the first part of the day25's problem

--- a/adventofcode2020.cabal
+++ b/adventofcode2020.cabal
@@ -120,9 +120,11 @@ executable day23
   import:              exe
   main-is:             Day23.hs
   build-depends:       vector
-                     , mtl
 
 executable day24
   import:              exe
   main-is:             Day24.hs
-  build-depends:       containers
+
+executable day25
+  import:              exe
+  main-is:             Day25.hs
